--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^7.5.3",
     "firebase": "^9.6.2",
     "monaco-editor": "^0.31.1",
     "sass": "^1.47.0",
